@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import javax.persistence.EntityNotFoundException;
 import javax.validation.ConstraintViolationException;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ErrorHandlingControllerAdvice {
@@ -23,7 +24,7 @@ public class ErrorHandlingControllerAdvice {
                 .map(violation -> new Violation(
                         violation.getPropertyPath().toString(),
                         violation.getMessage()))
-                .toList();
+                .collect(Collectors.toList());
         return new ValidationErrorResponse(violations);
     }
 
@@ -34,7 +35,7 @@ public class ErrorHandlingControllerAdvice {
             MethodArgumentNotValidException e) {
         final List<Violation> violations = e.getBindingResult().getFieldErrors().stream()
                 .map(error -> new Violation(error.getField(), error.getDefaultMessage()))
-                .toList();
+                .collect(Collectors.toList());
         return new ValidationErrorResponse(violations);
     }
 
